--- a/app/src/main/res/layout/content_avisos.xml
+++ b/app/src/main/res/layout/content_avisos.xml
@@ -17,5 +17,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listView_avisos"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        tools:listitem="@layout/avisos_row"/>
 </RelativeLayout>
