--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="azul_claro">#58A7B0</color>
+    <color name="rosa">#C800B5</color>
+    <color name="azul_oscuro">#09097B</color>
 </resources>
