--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="colorAccent">#FF4081</color>
     <color name="azul_claro">#58A7B0</color>
     <color name="rosa">#C800B5</color>
+    <color name="naranja">#ff381a</color>
     <color name="azul_oscuro">#09097B</color>
 </resources>
